# RustGlacier

./: Cargo.toml  README.md  test.glc
examples/: conditions.glc  eratosthenes.glc  fib.glc  fib.rb  fizzbuzz.glc  mandelbrot.glc  recursive.glc  sort_vars.glc  square.glc  square.min.glc
examples/js/: fib.generated.min.js  fib.glc  fizzbuzz.glc  simple.glc
polar/: Cargo.toml  README.md
polar/src/: instructions.rs  lib.rs  vm.rs
src/: lib.rs  main.rs  repl.rs
src/backends/: mod.rs
src/backends/js/: codegen.rs  glacier.js  glacier.min.js
src/glacier_compiler/: mod.rs
src/glacier_parser/: ast.rs  glacier.pest  mod.rs
src/glacier_vm/: builtins.rs  error.rs  instructions.rs  mod.rs  operators.rs  value.rs  vm.rs
src/parser/: ast.rs  glacier.pest  mod.rs
src/tests/: mod.rs
src/tests/tests/: 1_arithmetic.glc  2_cf1.glc  3_cf2.glc  arithmetic.glc
src/vm/: bytecode.rs  memory.rs  mod.rs  value.rs  vm_bc.rs
